--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Color Picker</title>
 </head>
 <body>
+    <h4 class="">click on screen or drag your coursor to change colors.</h4>
+    <h4 class="second">double click for rgb code.</h4>
     <script src="app.js"></script>
 </body>
 </html>
