--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h4 class="">click on screen or drag your coursor to change colors.</h4>
-    <h4 class="second">double click for rgb code.</h4>
+    <h4 class="second">double click to display rgb code.</h4>
     <script src="app.js"></script>
 </body>
 </html>
